src/test/rustdoc-ui/deny-missing-docs-macro.stderr
error: missing documentation for macro
  --> $DIR/deny-missing-docs-macro.rs:6:1
   |
LL | macro_rules! foo {
   | ^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/deny-missing-docs-macro.rs:3:9
   |
LL | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^

error: aborting due to previous error

